<resources>
    <string name="app_name">HelloVIT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="signout">Signout</string>
    <string name="enter_number_of_the_friend">Enter number of the Friend</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_your_hobby">Enter your hobby</string>
    <string name="save_to_slambook">Save to Slambook</string>
    <string name="save_to_slam_book">Save to Slam Book</string>
    <string name="enter_name_of_the_friend">Enter name of the friend</string>
    <string name="friends_list">Friends List</string>
</resources>