<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtName"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_of_the_friend"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtDOB"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_date_of_birth"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPhone"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtHobby"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_hobby"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:text="@string/save_to_slam_book"
        android:background="#2196F3"
        android:textColorHint="#0E0E0E"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFriendsList"
        android:text="@string/friends_list"
        android:background="#2196F3"
        android:textColorHint="#070707"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>


</androidx.appcompat.widget.LinearLayoutCompat>